syntax = "proto3";

package greetings;
import "src/generator/proto/greetings_message.proto";
service Greeter {
  rpc SayHello (greetings.HelloRequest) returns (greetings.HelloReply) {}
}